[package]
name = "windows-ez-overlay"
version = "0.2.0"
edition = "2021"

[dependencies]
windows = { git = "https://github.com/microsoft/windows-rs", features = [
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
